# RoboMaster

./: README.md
Armor_Finder_RotatedRect/: README.md  main.cpp
Armor_Finder_RotatedRect/ORB_based_Classifier_Report/: 基于ORB的级联分类器技术报告-韩煦源.md
Armor_Finder_RotatedRect/armor/include/armor_finder/armor_rect/: armorbox_isok.hpp  find_armor.hpp  find_armorbox.hpp  find_lightbox.hpp  lightbox_isok.hpp
Armor_Finder_RotatedRect/armor/include/armor_finder/image_processing/: ORB_classifier.hpp  classifier.hpp  color_filter.hpp  proportion_thresh.hpp  quadrilateral_to_mat.hpp
Camera_Test/: .gitignore  CMakeLists.txt  README.md  main.cpp  工业相机参数.md
Camera_Test/SimpleSample/: Makefile  main.cpp  sample  streamRetrieve.cpp
Camera_Test/SimpleSample_hanxuyuan/: Makefile  main.cpp
Camera_Test/SimpleSample_hanxuyuan/depends/lib/: libMVSDKGuiQt.so.1
Camera_Test/SimpleSample_hanxuyuan/include/: MatToVideo.h
Camera_Test/SimpleSample_hanxuyuan/include/GenICam/: Camera.h
Camera_Test/SimpleSample_hanxuyuan_cmake/: CMakeLists.txt  Makefile  StreamRetrieve.h  camera.hpp  main.cpp
Camera_Test/SimpleSample_hanxuyuan_cmake/include/other/: MatToVideo.h
Camera_Test/SimpleSample_with_RP_Infantry_Plus-master/: Makefile  main.cpp  sample
Camera_Test/SimpleSample_with_RP_Infantry_Plus-master/include/Camera/: video.h
Camera_Test/SimpleSample_with_RP_Infantry_Plus-master/include/GenICam/: Frame.h  StreamSource.h
classifier_test/: CMakeLists.txt  README.md  main.cpp
classifier_test/include/: classifier.hpp  get_proportion_thresh.hpp  timer.hpp
